# test-1

./: CHANGELOG.md  Cargo.toml  README.md  app.rc  build.rs  requirements.txt
.gitlab/: .gitlab-ci.yml
.gitlab/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_suggestion.yml  new_feature.yml
src/: main.rs
src/cpu/: mod.rs
src/disk/: browser_cache.rs  mod.rs  recycle_bin.rs  temp_files.rs  thumbnails.rs
src/memory/: mod.rs  tests.rs
src/profiles/: mod.rs
src/scheduler/: engine.rs  mod.rs  task.rs
src/services/: defender.rs  powershell_runner.rs  winapi_defender.rs  winapi_service_manager.rs
src/ui/: cpu_ui.rs  disk_ui.rs  mod.rs  scheduler_ui.rs  settings_ui.rs
src/ui/app/: mod.rs
