[package]
name = "gamebooster"
version = "1.1.0"
edition = "2021"
authors = ["Votre Nom <votre.email@example.com>"]
description = "Game Booster - Windows performance optimizer with QoS network limitation"
build = "build.rs"

[build-dependencies]
embed-resource = "3.0.4"
winres = "0.1"

# ONLY release builds with maximum optimizations
[profile.dev]
opt-level = 3
debug = false
overflow-checks = false
lto = "thin"
panic = "abort"

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = false

[dependencies]
eframe = { version = "0.25", default-features = false, features = ["accesskit", "default_fonts", "glow", "persistence"] }
egui = "0.25"
egui_extras = "0.25"
image = { version = "0.24", features = ["png"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.30"
poll-promise = "0.3"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_ProcessStatus", 
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_System_Services",
    "Win32_Security",
    "Win32_UI_Shell"
] }
thiserror = "1.0"
async-process = "2.3"
tracing-appender = "0.2"

# Windows APIs (surveillances réseau + QoS)
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winuser", "winsvc", "winnt", "processthreadsapi", "psapi", "handleapi",
    "shellapi", "winreg", "ntdef", "ntstatus", "lmcons",
    "securitybaseapi", "accctrl", "aclapi", "errhandlingapi", "fileapi",
    "libloaderapi", "memoryapi", "sysinfoapi", "tcpmib", "iphlpapi"
] }
winreg = "0.52"
